# bellerouze-chatbot

./: .dockerignore  .env.template  Makefile  README.md  TODO.md  docker-compose.yaml
.github/workflows/: docker-image.yml
client/: Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json
client/api/: messages.ts
client/app/components/: MessageBubble.vue
client/app/pages/: index.vue  phone.vue
client/app/plugins/: vue-query.ts
client/app/types/: messages.ts  pagination.ts
client/app/utils/: format.ts
server/: .gitignore  Dockerfile  pyproject.toml
server/server/: db.py  extra.txt  llm.py  logger.py  main.py  prompt.py  schemas.py  settings.py  test.py  test2.py  testing.py  utils.py
